# use-derive-macro

./: Cargo.toml  README.md
impl-attr-macro/: Cargo.toml
impl-attr-macro/src/: lib.rs
impl-derive/: Cargo.toml
impl-derive/src/: lib.rs
impl-fn-macro/: Cargo.toml
impl-fn-macro/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
my-trait/: Cargo.toml
my-trait/src/: lib.rs
