[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-trait = { path = "../my-trait" }
impl-derive = { path = "../impl-derive" }
impl-fn-macro = { path = "../impl-fn-macro" }
impl-attr-macro = { path = "../impl-attr-macro" }